Fix lang navigation to avoid wrapping now that we have more langs

--- a/app/assets/stylesheets/documentation.scss
+++ b/app/assets/stylesheets/documentation.scss
@@ -616,13 +616,13 @@ div.global-lang-container {
     padding: 5px;
   }
   ul {
-    margin-left: 6em;
+    margin-left: 5em;
     float: left;
     li {
       list-style: none;
       float: left;
       font-size: 14px;
-      padding: 1px 10px 3px 10px;
+      padding: 1px 8px 3px 8px;
       color: darken($lang-selector-color, 15%);
       cursor: pointer;
       &.selected {
